--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -40,6 +40,7 @@ add_library(neo SHARED
 
 target_link_libraries(neo PUBLIC $<TARGET_OBJECTS:neo_polylag>)
 target_link_libraries(neo PUBLIC $<TARGET_OBJECTS:interpolate>)
+target_link_libraries(neo PRIVATE hdf5_tools)
 target_link_libraries(neo PUBLIC $<TARGET_OBJECTS:neo_field>)
 
 target_link_libraries(neo PRIVATE
