hdf5_tools build: local paths to src-fiels

--- a/src/hdf5_tools/CMakeLists.txt
+++ b/src/hdf5_tools/CMakeLists.txt
@@ -40,8 +40,8 @@ include_directories(${HDF5_INCLUDE_DIRS})
 
 ### Define executable
 add_library(hdf5_tools
-	${CMAKE_SOURCE_DIR}/src/hdf5_tools/hdf5_tools.f90
-	${CMAKE_SOURCE_DIR}/src/hdf5_tools/hdf5_tools_f2003.f90
+	        hdf5_tools.f90
+	        hdf5_tools_f2003.f90
 )
 target_link_libraries(hdf5_tools PUBLIC ${HDF5_LIBRARIES} ${HDF5_HL_LIBRARIES})
 
