--- a/src/hdf5_tools/CMakeLists.txt
+++ b/src/hdf5_tools/CMakeLists.txt
@@ -11,7 +11,6 @@ if (CMAKE_Fortran_COMPILER_ID MATCHES "GNU")
 elseif (CMAKE_Fortran_COMPILER_ID MATCHES "Intel")
   set(CMAKE_Fortran_FLAGS "-O2 -cpp -mkl -stand f08")
 endif ()
-set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/include)
 
 ### Find HDF5
 find_package(HDF5 COMPONENTS Fortran Fortran_HL)
@@ -45,10 +44,10 @@ add_library(hdf5_tools
 )
 target_link_libraries(hdf5_tools PUBLIC ${HDF5_LIBRARIES} ${HDF5_HL_LIBRARIES})
 
-# if (CMAKE_Fortran_COMPILER_ID MATCHES "GNU")
-#   install (TARGETS hdf5_tools DESTINATION ${CMAKE_SOURCE_DIR}/lib)
-#   install (DIRECTORY ${CMAKE_Fortran_MODULE_DIRECTORY}/ DESTINATION ${CMAKE_SOURCE_DIR}/include)
-# elseif (CMAKE_Fortran_COMPILER_ID MATCHES "Intel")
-#   install (TARGETS hdf5_tools DESTINATION ${CMAKE_SOURCE_DIR}/ifort/lib)
-#   install (DIRECTORY ${CMAKE_Fortran_MODULE_DIRECTORY}/ DESTINATION ${CMAKE_SOURCE_DIR}/ifort/include)
-# endif ()
+if (CMAKE_Fortran_COMPILER_ID MATCHES "GNU")
+  install (TARGETS hdf5_tools DESTINATION ${CMAKE_SOURCE_DIR}/lib)
+  install (DIRECTORY ${CMAKE_Fortran_MODULE_DIRECTORY}/ DESTINATION ${CMAKE_SOURCE_DIR}/include)
+elseif (CMAKE_Fortran_COMPILER_ID MATCHES "Intel")
+  install (TARGETS hdf5_tools DESTINATION ${CMAKE_SOURCE_DIR}/ifort/lib)
+  install (DIRECTORY ${CMAKE_Fortran_MODULE_DIRECTORY}/ DESTINATION ${CMAKE_SOURCE_DIR}/ifort/include)
+endif ()
