--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -15,6 +15,7 @@ add_library(neo SHARED
     src/libneo_kinds.f90
     src/math_constants.f90
     src/ode_integration.f90
+    src/poincare_plot/poincare_plot.f90
     src/rusage_type.f90
     src/solve_systems.f90
     src/system_utility.f90
@@ -42,7 +43,6 @@ target_link_libraries(neo PUBLIC $<TARGET_OBJECTS:neo_polylag>)
 target_link_libraries(neo PUBLIC $<TARGET_OBJECTS:interpolate>)
 target_link_libraries(neo PRIVATE hdf5_tools)
 target_link_libraries(neo PUBLIC $<TARGET_OBJECTS:neo_field>)
-target_link_libraries(neo PUBLIC $<TARGET_OBJECTS:neo_poincare_plot>)
 
 target_link_libraries(neo PRIVATE
   rkf45
