--- a/test/poincare_plot/CMakeLists.txt
+++ b/test/poincare_plot/CMakeLists.txt
@@ -2,8 +2,11 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test/poincare_plot)
 
 add_executable(test_poincare_plot.x test_poincare_plot.f90)
 target_link_libraries(test_poincare_plot.x PRIVATE neo
-                                               util_for_test)
+                                               util_for_test
+                                               util_for_test_jorek_field)
 add_test(NAME test_poincare_plot COMMAND test_poincare_plot.x)
+set_tests_properties(test_poincare_plot PROPERTIES 
+                     FIXTURES_REQUIRED "SetupTestFieldJorek")
 
 set_tests_properties(
     test_poincare_plot
