--- a/src/field/CMakeLists.txt
+++ b/src/field/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(neo_field OBJECT
     field_base.f90
     example_field.f90
+    circular_tokamak_field.f90
     biotsavart.f90
     biotsavart_field.f90
     field_mesh.f90
