--- a/tools/h5merge/CMakeLists.txt
+++ b/tools/h5merge/CMakeLists.txt
@@ -1,5 +1,5 @@
 ### Basic settings
-cmake_minimum_required (VERSION 2.8.12)
+cmake_minimum_required(VERSION 3.18)
 
 set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 
@@ -14,19 +14,24 @@ set(PROJECT_EXE_NAME "h5merge.x")
 set(CMAKE_Fortran_MODULE_DIRECTORY ./OBJS)
 set(CMAKE_Fortran_FLAGS "-g -Wall")
 
-find_package(HDF5 COMPONENTS C HL Fortran REQUIRED)
+find_package(BLAS REQUIRED)
+find_package(LAPACK REQUIRED)
+find_package(HDF5 COMPONENTS Fortran Fortran_HL)
+if (NOT ${HDF5_FOUND})
+	message(FATAL_ERROR "HDF5 not found, please set environment variable HDF5_ROOT to the correct path")
+endif ()
 include_directories(${HDF5_INCLUDE_DIRS})
 
 find_library(HDF5_TOOLS_LIB NAMES hdf5_tools libhdf5_tools.a PATHS ${CMAKE_SOURCE_DIR}/../../build/ ${CMAKE_BINARY_DIR}/ PATH_SUFFIXES src/hdf5_tools/ NO_DEFAULT_PATH)
 
-include_directories(${CMAKE_SOURCE_DIR}/../../build/ ${CMAKE_BINARY_DIR})
+include_directories(${CMAKE_SOURCE_DIR}/../../build/include ${CMAKE_BINARY_DIR})
 
 set(Interface_Libs
   ${HDF5_TOOLS_LIB}
   ${HDF5_Fortran_HL_LIBRARIES}
   ${HDF5_Fortran_LIBRARIES}
-  lapack
-  blas
+  ${LAPACK_LIBRARIES}
+  ${BLAS_LIBRARIES}
 )
 
 ### Define executable
