MyMPILib path adapted

--- a/src/MyMPILib/CMakeLists.txt
+++ b/src/MyMPILib/CMakeLists.txt
@@ -5,7 +5,7 @@ enable_language (Fortran)
 # MPI
 find_package (MPI REQUIRED COMPONENTS Fortran)
 
-include (${CMAKE_SOURCE_DIR}/src/MyMPILib/ProjectConfig.cmake.in)
+include (${PROJECT_SOURCE_DIR}/ProjectConfig.cmake.in)
 option(MPE_SUPPORT "Should the library be built with MPE-Support?" OFF)
 
 message(STATUS "The Compiler ID is ${CMAKE_Fortran_COMPILER_ID}")
@@ -37,10 +37,10 @@ set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
 
 include_directories(${MPI_Fortran_INCLUDE_PATH})
 include_directories("${PROJECT_BINARY_DIR}")
-include_directories("${CMAKE_SOURCE_DIR}/src/MyMPILib/Generic")
-include_directories("${CMAKE_SOURCE_DIR}/src/MyMPILib/Specific")
-include_directories("${CMAKE_SOURCE_DIR}/src/MyMPILib/Internal")
-include_directories("${CMAKE_SOURCE_DIR}/src/MyMPILib/Tools")
+include_directories("${PROJECT_SOURCE_DIR}/Generic")
+include_directories("${PROJECT_SOURCE_DIR}/Specific")
+include_directories("${PROJECT_SOURCE_DIR}/Internal")
+include_directories("${PROJECT_SOURCE_DIR}/Tools")
 
 if (MPE_SUPPORT)
 	message(STATUS "MPE-Support activated, MPE-Path: ${MPE_PATH}")
@@ -51,34 +51,34 @@ if (MPE_SUPPORT)
 endif ()
 
 add_library(MyMPILib
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Specific/packBuffer_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Specific/mpiprovider_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Tools/list_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Internal/packable_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Internal/matrix_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Internal/clientStatus_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Generic/workunit_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Internal/wuDataRequester_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Tools/intList_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Tools/wuList_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Tools/packableList_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Tools/commandline_parser_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Generic/scheduler_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Tools/mpelog_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Tools/myLog_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Tools/configFile_parser_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Internal/wuMergeWorkunit_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Internal/wuMergeChunk_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Generic/initWorkunit_module.f90
-${CMAKE_SOURCE_DIR}/src/MyMPILib/Generic/genericWorkunit_module.f90
+${PROJECT_SOURCE_DIR}/Specific/packBuffer_module.f90
+${PROJECT_SOURCE_DIR}/Specific/mpiprovider_module.f90
+${PROJECT_SOURCE_DIR}/Tools/list_module.f90
+${PROJECT_SOURCE_DIR}/Internal/packable_module.f90
+${PROJECT_SOURCE_DIR}/Internal/matrix_module.f90
+${PROJECT_SOURCE_DIR}/Internal/clientStatus_module.f90
+${PROJECT_SOURCE_DIR}/Generic/workunit_module.f90
+${PROJECT_SOURCE_DIR}/Internal/wuDataRequester_module.f90
+${PROJECT_SOURCE_DIR}/Tools/intList_module.f90
+${PROJECT_SOURCE_DIR}/Tools/wuList_module.f90
+${PROJECT_SOURCE_DIR}/Tools/packableList_module.f90
+${PROJECT_SOURCE_DIR}/Tools/commandline_parser_module.f90
+${PROJECT_SOURCE_DIR}/Generic/scheduler_module.f90
+${PROJECT_SOURCE_DIR}/Tools/mpelog_module.f90
+${PROJECT_SOURCE_DIR}/Tools/myLog_module.f90
+${PROJECT_SOURCE_DIR}/Tools/configFile_parser_module.f90
+${PROJECT_SOURCE_DIR}/Internal/wuMergeWorkunit_module.f90
+${PROJECT_SOURCE_DIR}/Internal/wuMergeChunk_module.f90
+${PROJECT_SOURCE_DIR}/Generic/initWorkunit_module.f90
+${PROJECT_SOURCE_DIR}/Generic/genericWorkunit_module.f90
 )
 
 install(TARGETS MyMPILib ARCHIVE DESTINATION lib)
 
 add_custom_target(
     Versioning
-    COMMAND ${CMAKE_SOURCE_DIR}/src/MyMPILib/Scripts/do_versioning.sh
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/src/MyMPILib
+    COMMAND ${PROJECT_SOURCE_DIR}/Scripts/do_versioning.sh
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
 )
 
 add_dependencies(MyMPILib Versioning)
