--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -130,3 +130,12 @@ target_include_directories(coil_convert.x PUBLIC ${hdf5_tools_include_dir} ${FFT
 
 add_library(LIBNEO::magfie ALIAS magfie)
 add_library(LIBNEO::neo ALIAS neo)
+
+install(TARGETS neo magfie mc_efit
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib
+    RUNTIME DESTINATION bin
+    INCLUDES DESTINATION include
+)
+
+install(DIRECTORY include/ DESTINATION include FILES_MATCHING PATTERN "*.mod")
