Fix f2py lookup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,10 +126,12 @@ endif()
 
 # F2PY headers
 execute_process(
-  COMMAND "${PYTHON_EXECUTABLE}" -c
-          "import numpy.f2py; print(numpy.f2py.get_include())"
-  OUTPUT_VARIABLE F2PY_INCLUDE_DIR
-  OUTPUT_STRIP_TRAILING_WHITESPACE)
+    COMMAND "${Python_EXECUTABLE}"
+    -c "import os; import numpy.f2py; print(os.path.dirname(numpy.f2py.__file__))"
+    OUTPUT_VARIABLE F2PY_DIR
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+set(F2PY_INCLUDE_DIR "${F2PY_DIR}/src")
 
 include_directories(
     BEFORE
