--- a/src/interpolate/CMakeLists.txt
+++ b/src/interpolate/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_library(interpolate OBJECT
     interpolate.f90)
 
+set_property(TARGET interpolate PROPERTY
+    INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Fortran_MODULE_DIRECTORY})
 add_library(LIBNEO::interpolate ALIAS interpolate)
