--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,8 @@ find_package (MPI REQUIRED COMPONENTS Fortran)
 if(${CMAKE_Fortran_COMPILER_ID} STREQUAL "GNU")
 
   set (CMAKE_Fortran_FLAGS "-cpp -g -Og -fPIC -fcheck=all -fbacktrace \
-                            -fno-realloc-lhs -fopenmp -Wall -Wextra")
+                            -fno-realloc-lhs -fopenmp -Wall -Wextra -Werror \
+                            -Wno-unused-function -fmax-errors=1")
 
   # https://github.com/numpy/numpy/issues/25777
   set (CMAKE_C_FLAGS "-Wno-error=incompatible-pointer-types")
