Clean installation of interpolate.py

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -271,4 +271,4 @@ set_target_properties(
 )
 
 install(TARGETS ${F2PY_MODULE_NAME} DESTINATION .)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/interpolate.py DESTINATION .)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/interpolate.py DESTINATION libneo)
