--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,5 @@ classifiers = [
 [tool.scikit-build]
 build-dir = "build"
 build.verbose = true
+cmake.define.CMAKE_CACHE_DIR = "build"
+cmake.define.CMAKE_PRESET = "default"
