--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Fix permissions
+        run: |
+          git config --global --add safe.directory `pwd`
+
       - name: Build
         run: |
           make
