Dependency not in CODE anymore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -277,4 +277,5 @@ set_target_properties(
 install(TARGETS ${F2PY_MODULE_NAME} DESTINATION .)
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/interpolate.py DESTINATION libneo)
 
-find_or_fetch(efit_to_boozer FALSE)
+fetch(efit_to_boozer)
+add_subdirectory(${efit_to_boozer_SOURCE_DIR} efit_to_boozer)
