--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -52,6 +52,11 @@ target_link_libraries(neo PRIVATE
   netcdff
 )
 
+add_library(LIBNEO::neo ALIAS neo)
+set_target_properties(neo PROPERTIES
+    INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_BINARY_DIR}/include
+)
+
 
 add_library(magfie STATIC
 
@@ -77,6 +82,17 @@ add_library(magfie STATIC
     src/magfie/coil_tools.f90
     src/fftw3.f90
 )
+target_link_libraries(magfie PUBLIC
+    rkf45
+    netcdf
+    netcdff
+    hdf5_tools
+)
+set_target_properties(magfie PROPERTIES
+    INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_BINARY_DIR}/include
+    INTERFACE_LINK_LIBRARIES "LIBNEO::neo;FFTW::DoubleThreads;FFTW::Double;OpenMP::OpenMP_C;OpenMP::OpenMP_Fortran"
+)
+add_library(LIBNEO::magfie ALIAS magfie)
 
 add_library(mc_efit STATIC
     src/MC/alpha_lifetime_mod.f90
@@ -108,16 +124,6 @@ endif()
 # Assumes previous include of hdf5_tools/CMakeLists.txt for find_package
 set(hdf5_tools_include_dir ${CMAKE_BINARY_DIR})
 
-target_link_libraries(magfie PUBLIC
-    neo
-    rkf45
-    netcdf
-    netcdff
-    hdf5_tools
-    ${FFTW_LIBRARIES}
-    ${BLAS_LIBRARIES}
-    ${LAPACK_LIBRARIES}
-)
 target_link_libraries(vacfield.x PUBLIC magfie)
 target_link_libraries(coil_convert.x PUBLIC magfie)
 
@@ -125,13 +131,4 @@ target_include_directories(magfie PUBLIC ${hdf5_tools_include_dir} ${FFTW_INCLUD
 target_include_directories(vacfield.x PUBLIC ${hdf5_tools_include_dir} ${FFTW_INCLUDE_DIRS})
 target_include_directories(coil_convert.x PUBLIC ${hdf5_tools_include_dir} ${FFTW_INCLUDE_DIRS})
 
-add_library(LIBNEO::magfie ALIAS magfie)
-set_target_properties(magfie PROPERTIES
-    INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_BINARY_DIR}/include
-    INTERFACE_LINK_LIBRARIES "OpenMP::OpenMP_C;OpenMP::OpenMP_Fortran"
-)
 
-add_library(LIBNEO::neo ALIAS neo)
-set_target_properties(neo PROPERTIES
-    INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_BINARY_DIR}/include
-)
